syntax = "proto3";

import "pkg/types/date.proto";
import "domains/nutrition/models/macros.proto";

package domains.nutrition.models;
option go_package = "github.com/kirvader/BodyController/domains/nutrition/models";




message PersonalNutritionLifestyle {
	string hex_id = 1;
    string title = 2;
    string username = 3;
    pkg.types.Date first_day = 4;
    pkg.types.Date last_day = 5;
    domains.nutrition.models.Macros lowerbound_macros_requirements = 6;
    domains.nutrition.models.Macros upperbound_macros_requirements = 7;
};
